--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -15,5 +15,6 @@
     "@hospital-yl/patient": "^0.0.1",
     "@hospital-yl/scheduler": "^0.0.1",
     "ts-node": "^10.7.0"
-  }
+  },
+  "gitHead": "9e2496f0a5b5eff9b07b9908370f143b7c89f58a"
 }
